<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6CCAB"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/num1"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:layout_marginTop="145dp"
        android:layout_marginBottom="147dp"
        android:ems="10"
        android:hint="@string/num1"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:background="#03A9F4"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:layout_marginTop="292dp"
        android:hint="@string/result"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/add"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSub"
        app:layout_constraintStart_toStartOf="@+id/btnMod" />

    <Button
        android:id="@+id/btnPow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power"
        app:layout_constraintEnd_toStartOf="@+id/btnPerc"
        app:layout_constraintStart_toEndOf="@+id/btnMod"
        app:layout_constraintTop_toTopOf="@+id/btnPerc" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnMul" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnMul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPerc" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPerc" />

    <Button
        android:id="@+id/btnPerc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="1dp"
        android:text="@string/percentage"
        app:layout_constraintEnd_toStartOf="@+id/btnDiv"
        app:layout_constraintStart_toEndOf="@+id/btnPow"
        app:layout_constraintTop_toTopOf="@+id/btnMul" />

    <Button
        android:id="@+id/btnMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/modulo"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPow"
        app:layout_constraintEnd_toStartOf="@+id/btnPow"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:text="@string/multiply"
        app:layout_constraintStart_toStartOf="@+id/btnPerc"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPerc"
        app:layout_constraintStart_toEndOf="@+id/btnMul" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="210dp"
        android:layout_height="64dp"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:hint="@string/num2"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/num1" />

</androidx.constraintlayout.widget.ConstraintLayout>